--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.13.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notion": "^0.10.0",
     "styled-components": "^6.0.8",
     "three": "^0.156.1"
   },
