--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^8.13.7",
     "axios": "^1.6.2",
     "gsap": "^3.12.3",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-notion-x": "^6.16.0",
