--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-notion-x": "^6.16.0",
+    "react-router-dom": "^6.22.1",
     "styled-components": "^6.0.8",
     "three": "^0.156.1"
   },
