--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.13.7",
     "axios": "^1.6.2",
     "gsap": "^3.12.3",
+    "locomotive-scroll": "^4.1.4",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "three": "^0.156.1"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.156.0",
